--- a/.gitmodules
+++ b/.gitmodules
@@ -1,7 +1,14 @@
-[submodule "ansible-role-nginx"]
+[submodule "roles/nginx"]
 	path = roles/nginx
 	url = https://github.com/geerlingguy/ansible-role-nginx.git
 
-[submodule "ansible-role-httpd"]
+[submodule "roles/httpd"]
 	path = roles/httpd
 	url = https://github.com/bertvv/ansible-role-httpd.git
+
+[submodule "roles/kibana"]
+	path = roles/kibana
+	url = https://github.com/geerlingguy/ansible-role-kibana.git
+[submodule "roles/java"]
+	path = roles/java
+	url = https://github.com/geerlingguy/ansible-role-java.git
