--- a/roles/ec2/tasks/KibElast.yml
+++ b/roles/ec2/tasks/KibElast.yml
@@ -1,34 +1,34 @@
-- name: Create ec2 for Nginx
+- name: Create ec2 for Elasticsearch and Kibana
   ec2:
     key_name: "{{ sshkey }}"
-    group: "{{ secgrps['web'] }}"
-    instance_type: "{{logstash_type}}"
+    group: "{{ secgrps['monitoring'] }}"
+    instance_type: "{{elk_type}}"
     image: "{{ ami[region] }}"
     wait: true
     region: "{{ region }}"
-    vpc_subnet_id: "{{ subnets['private'] }}"
+    vpc_subnet_id: "{{ subnets['public'] }}"
     assign_public_ip: yes
     instance_tags:
-      Name: "{{ project_name }}.Nginx"
+      Name: "{{ project_name }}.ELK"
       Environment: "{{ env }}"
-  when: groups['nginx'] | length == 0
-  register: ec2Nginx
+  when: groups['elk'] | length == 0
+  register: ec2ELK
 
 - name: Wait for SSH to come up
   delegate_to: "{{ item.public_dns_name }}"
   wait_for_connection:
     delay: 30
     timeout: 320
-  when: groups['nginx'] | length == 0
-  with_items: "{{ ec2Nginx.instances }}"
+  when: groups['elk'] | length == 0
+  with_items: "{{ ec2ELK.instances }}"
 
 - name: Add to inventory
   lineinfile:
     dest: "{{ lookup('env','ANSIBLEENV') }}/hosts"
-    insertafter: '^\[nginx\]'
+    insertafter: '^\[elk\]'
     line: "{{ item.public_dns_name }} instance_id={{ item.id}} private_ip={{ item.private_ip }}"
-  when: groups['nginx'] | length == 0
-  with_items: "{{ ec2Nginx.instances }}"
+  when: groups['elk'] | length == 0
+  with_items: "{{ ec2ELK.instances }}"
 
 - name: Refresh inventory
   meta: refresh_inventory
