Added Ubuntu logstash

--- a/.gitmodules
+++ b/.gitmodules
@@ -12,3 +12,6 @@
 [submodule "roles/java"]
 	path = roles/java
 	url = https://github.com/geerlingguy/ansible-role-java.git
+[submodule "roles/ansible-role-apache"]
+	path = roles/ansible-role-apache
+	url = https://github.com/geerlingguy/ansible-role-apache.git
