--- a/vars.conf
+++ b/vars.conf
@@ -1,6 +1,1 @@
-AWS_DEFAULT_PROFILE=academy
-ANSIBLEENV=prod
-sshKeyFile=~/.aws/automationlogic/steveshillingacademyie.pem
-#DEBUG=yes
-
-export AWS_DEFAULT_PROFILE ANSIBLEENV sshKeyFile
+ubuntu.conf
