--- a/roles/logstash/tasks/common.yml
+++ b/roles/logstash/tasks/common.yml
@@ -46,6 +46,31 @@
   shell: kill -9 `ps -ef | grep logstash | grep -v grep | awk '{print $2}'`
   when: input.changed or output.changed or filter.changed
 
+- name: Override default systemd for logstash
+  template:
+    src: systemd_logstash.j2
+    dest: /etc/systemd/system/logstash.service
+    owner: root
+    group: root
+    mode: 0644
+  notify: "restart logstash"
+
+- name: Journald Limit Burst
+  template:
+    src: journald.conf.j2
+    dest: /etc/systemd/journald.conf
+    owner: root
+    group: root
+    mode: 0644
+  notify: "restart logstash"
+
+- name: Make sure logstash is running and enabled Debian
+  service:
+    name: logstash
+    enabled: yes
+    state: started
+    daemon_reload: yes
+
 - name: Restart logstash because of config change
   service:
     name: logstash
