--- a/roles/logstash/tasks/deb.yml
+++ b/roles/logstash/tasks/deb.yml
@@ -14,19 +14,19 @@
   apt: deb="/tmp/logstash-{{ logstash_version }}.deb"
   when: my_package_check_deb.rc == 1
 
-- name: Create logstash service file
-  copy:
-    src: files/logstash.svc
-    dest: /etc/init.d/logstash.svc
-    owner: root
-    group: root
-    mode: 0755
-  when: ansible_os_family == "Debian"
-
-- name: Make sure logstash is running and enabled Debian
-  service:
-    name: logstash.svc
-    enabled: yes
-    state: started
-    daemon_reload: yes
-  when: ansible_os_family == "Debian"
+# - name: Create logstash service file
+#   copy:
+#     src: files/logstash.svc
+#     dest: /etc/init.d/logstash.svc
+#     owner: root
+#     group: root
+#     mode: 0755
+#   when: ansible_os_family == "Debian"
+#
+# - name: Make sure logstash is running and enabled Debian
+#   service:
+#     name: logstash.svc
+#     enabled: yes
+#     state: started
+#     daemon_reload: yes
+#   when: ansible_os_family == "Debian"
